--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .contents {
     background-color: hsl(212, 45%, 89%);
-    padding: 80px;
+    padding: 60px;
     margin: 20px 20px 0 20px;
     display: flex;
     justify-content: center;
@@ -16,10 +16,19 @@
 }
 .card-img, .card-txt {
     max-width: 180px;
+    font-family: 'Outfit', sans-serif;
 }
-.card, img {
-    border-radius: 8px;
+.card, .card-img img {
+    border-radius: 10px;
 }
 .card-img img {
    max-width: 100%;
+}
+.bold-txt {
+    font-weight: 700;
+    color: hsl(218, 44%, 22%);
+}
+.light-txt {
+    font-weight: 400;
+    color: hsl(220, 15%, 55%);
 }
